--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but adaptivestoryengine doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Adaptive Story Engine doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
