--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>adaptivestoryengine</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/9.0.1/markdown-it.js" integrity="sha256-UQB7lV8v8whdil4YKAqKfcZT/iQ6qnlR1Vi69NoK+Lo=" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>
